--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,46 @@
-apply plugin: 'java'
-apply plugin: 'application'
+buildscript {
+	ext {
+		springBootVersion = '1.5.6.RELEASE'
+	}
 
-repositories {
-    jcenter()  
+	repositories {
+		mavenLocal()
+		mavenCentral()
+		maven { url "http://repo.spring.io/release" }
+	}
+	dependencies {
+		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+	}
 }
 
+apply plugin: 'java'
+apply plugin: 'application'
+apply plugin: 'org.springframework.boot'
+apply plugin: 'io.spring.dependency-management'
+
+
+group = 'com.sample'
+version = '1.0-SNAPSHOT'
+
+jar {
+    manifest {
+        attributes 'Implementation-Title': description,
+                   'Implementation-Version': version
+    }
+}
+
+description = "Spring Boot template project 2017"
+
+sourceCompatibility = 1.8
+targetCompatibility = 1.8
+
 ext {
-    springfoxSwaggerVersion = "2.7.0"
+    springfoxSwaggerVersion = '2.7.0'
+}
+repositories {
+    mavenCentral()
+    mavenLocal()
+    jcenter() 
 }
 
 dependencies {
@@ -17,9 +51,10 @@ dependencies {
 	compile("org.springframework.data:spring-data-rest-webmvc")
 	compile("org.springframework.boot:spring-boot-starter-security")
 	compile("com.fasterxml.jackson.datatype:jackson-datatype-jsr310")
-	compile("io.springfox:springfox-swagger2:springfoxSwaggerVersion")
-	compile("io.springfox:springfox-swagger-ui:springfoxSwaggerVersion")
-	compile("com.h2database:h2")
+	compile("io.springfox:springfox-swagger2:${springfoxSwaggerVersion}")
+	compile("io.springfox:springfox-swagger-ui:${springfoxSwaggerVersion}")
+	compile group: 'com.h2database', name: 'h2'
+	
 	testCompile("io.springfox:springfox-staticdocs:2.6.1")
 	testCompile("org.springframework.boot:spring-boot-starter-test")
 }
