--- a/build.gradle
+++ b/build.gradle
@@ -49,6 +49,7 @@ dependencies {
 	compile("org.springframework.boot:spring-boot-starter-data-jpa")
 	compile("org.springframework.boot:spring-boot-starter-web")
 	compile("org.springframework.data:spring-data-rest-webmvc")
+    compile("org.springframework.data:spring-data-rest-hal-browser")
 	compile("org.springframework.boot:spring-boot-starter-security")
 	compile("com.fasterxml.jackson.datatype:jackson-datatype-jsr310")
 	compile("io.springfox:springfox-swagger2:${springfoxSwaggerVersion}")
