--- a/pom.xml
+++ b/pom.xml
@@ -143,7 +143,12 @@
 					</execution>
 				</executions>
 			</plugin>
-		</plugins>
+     <plugin>
+      <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-jar-plugin</artifactId>
+        <version>3.0.2</version>
+     </plugin>   
+	</plugins>
 
 	</build>
 
